bunch of fixes for ff

--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -338,12 +338,21 @@ h1, h2, h3, h4, h5, h6, p, div, span, a { font-family: 'MuliRegular'; font-weigh
 .popover{background-color: #FFECBD;border-width: 10px;border-style: solid;border-color: #FDD05B; z-index:1001;}
 .popover.left .arrow{right:-20px; border-left-color:#FDD05B;}
 .popover.right .arrow{left:-20px; border-right-color:#FDD05B;}
+.popover.left .arrow:after {border-left-color: #FDD05B;}
+.popover.right .arrow:after {border-right-color: #FDD05B;}
 .popover-content p{color:#404040; margin:0; font-size:13px;}
 .popover-content{padding:6px 6px 3px 6px;}
 .popover{width:150px;}
 .popover-close{float:right;margin-right: 5px;font-size: 11px;text-shadow: none;}
 .popover-close:after{content:"Close";}
+.postspace>.popover {top:32% !important;}
 
 .highlighted { -moz-box-shadow: inset 0px 0px 20px 0px whiteSmoke; -webkit-box-shadow: inset 0px 0px 20px 0px whiteSmoke; box-shadow: inset 0px 0px 20px 0px whiteSmoke; }
 div.footer { bottom: inherit; }
 .mb-tooltip{height:17px; width:16px; background-image:url('https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/question_mark_tooltip.png'); margin-bottom:-3px; display:inline-block; cursor:pointer;}
+
+/* FF specific CSS */
+@-moz-document url-prefix() {
+	.persona_progress_area img{vertical-align:baseline; position:relative; top:8px;}
+	.singleprogressentry img{vertical-align:baseline;}
+}
