--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -53,7 +53,7 @@
                   %div
                     %div.nub{ style: "left:150px;" }
                   %div.leftboxheader Your Challenges
-                  %div.leftboxfooter{style:"padding:0; background-color:white; max-height: 412px; overflow-y:scroll;"}
+                  %div.leftboxfooter{style:"padding:0; background-color:white; max-height: 412px; overflow-y:auto;"}
                     - current_user.enrollments.includes(:path).all(order: "total_points DESC").each do |e|
                       = link_to challenge_path(e.path.permalink) do
                         %div.singleprogressentry
@@ -74,7 +74,7 @@
                   %div
                     %div.nub
                   %div.leftboxheader Notifications
-                  %div.leftboxfooter{style: "padding: 0;background-color: white;max-height: 352px;overflow-y: scroll;"}
+                  %div.leftboxfooter{style: "padding: 0;background-color: white;max-height: 352px;overflow-y: auto;"}
                     - notifications.each do |event|
                       %li.notification_space
                         %div.notification{ class: "#{event.is_read ? '' : 'notification-unread'}" }
