Fixes for new admin panel.

--- a/app/views/companies/overview.html.haml
+++ b/app/views/companies/overview.html.haml
@@ -10,43 +10,55 @@
         %p Total Users
       %td
         %h3= @arena_answers
-        %p Total Arena Answers
+        %p Arena Answers
       %td
-        %h3= @creative_responses
-        %p Total Creative Responses
+        %h3= @creative_answers
+        %p Creative Answers
       %td
-        %h3= @completed_tasks
-        %p Total Completed Tasks
+        %h3= @task_answers
+        %p Task Answers
       %td
-        %h3= @contributions
-        %p Total Contributions
+        %h3= @arena_questions
+        %p Arena Questions
+      %td
+        %h3= @creative_questions
+        %p Creative Questions
+      %td
+        %h3= @task_questions
+        %p Task Questions
       %td
         %h3= @votes
-        %p Total Votes
+        %p Votes
       %td
         %h3= @comments
-        %p Total Comments
+        %p Comments
   %h3 Recent Activity
   %table.table.overview
     %tr
       %td
         %h3= @new_users
-        %p New Users
+        %p Users
       %td
         %h3= @new_arena_answers
-        %p New Arena Answers
+        %p Arena Answers
       %td
-        %h3= @new_creative_responses
-        %p New Submissions
+        %h3= @new_creative_answers
+        %p Creative Response Answers
       %td
-        %h3= @new_completed_tasks
-        %p New Completed Tasks
+        %h3= @new_task_answers
+        %p Task Answers
       %td
-        %h3= @new_contributions
-        %p New Contributions
+        %h3= @new_arena_questions
+        %p Arena Questions
+      %td
+        %h3= @new_creative_questions
+        %p Creative Questions
+      %td
+        %h3= @new_task_questions
+        %p Task Questions
       %td
         %h3= @new_votes
-        %p New Votes
+        %p Votes
       %td
         %h3= @new_comments
-        %p New Comments
+        %p Comments
