Adding returning user count to admin dashboard.

--- a/app/views/companies/overview.html.haml
+++ b/app/views/companies/overview.html.haml
@@ -9,6 +9,9 @@
         %h3= @users
         %p Total Users
       %td
+        %h3= @returning_users
+        %p Returning Users
+      %td
         %h3= @arena_answers
         %p Arena Answers
       %td
@@ -38,6 +41,9 @@
       %td
         %h3= @new_users
         %p Users
+      %td
+        %h3= @new_returning_users
+        %p Returning Users
       %td
         %h3= @new_arena_answers
         %p Arena Answers
