edits made to create_cr_unlock

--- a/app/views/mailer/create_cr_unlock.html.haml
+++ b/app/views/mailer/create_cr_unlock.html.haml
@@ -16,10 +16,10 @@
           %span{:style => "font-size:14px; font-style:italic;"} You've unlocked a new privilege...
           %hr{:style => "border:1px solid rgba(0, 0, 0, .1); border-bottom:none;"}
             %p{:style => "font-size:12px;"}
-              After making solid progress in @challenge_name, you've unlocked the ability to create your own CR's. 
-              The CR's you post will be immediately available to the MetaBright community.    
+              After making solid progress in @challenge_name Challenge, you've unlocked the ability to create your own CR's, Tasks, and Arena questions. 
+              The questions you create will be immediately accessible in the @challenge_name Challenge by the MetaBright community.    
             %p{:style => "font-size:12px;"} 
-              You can make CR's by clicking the new "Create a CR" button on your stream.
+              To get started, click the blue "Create a Question" button in the modal.
               %a{href:"#"} Try it out now.
             %p{:style => "font-size:12px;"} 
               Thanks,
