--- a/app/views/layouts/_launchpad_modal.html.haml
+++ b/app/views/layouts/_launchpad_modal.html.haml
@@ -43,9 +43,13 @@
       });
        
       $(".launchpad_link").on("ajax:success", function(xhr, data, etc){
-        $("span.pointer_caret").remove();
-        $(".sectioninfocontainer").replaceWith(data);
-        $(this).find("a").prepend("<span class='pointer_caret'>» </span>");
+        if(data.status){
+          log("Cannot access this content.");
+        } else {
+          $("span.pointer_caret").remove();
+          $(".sectioninfocontainer").replaceWith(data);
+          $(this).find("a").prepend("<span class='pointer_caret'>» </span>");
+        }
       });
     });
   
