--- a/app/views/shared/_newsfeed.html.haml
+++ b/app/views/shared/_newsfeed.html.haml
@@ -2,7 +2,7 @@
   div.posttext.leveltext.dropdown:hover ul.dropdown-menu{display: block;}
   a.menu:after, .dropdown-toggle:after {content: none;}
 
-- if newsfeed_items.empty?
+- if @completed_tasks.empty?
   %div.post.empty_post{ style: "height: 300px;"}
     %p There are no responses yet.
 - else
@@ -18,19 +18,19 @@
       init_iph();
     });
 
-- newsfeed_items.each do |r|
+- @completed_tasks.each do |ct|
   %div.post
     %div.postphotospace
-      = link_to (image_tag r.user.profile_pic, class: "photo"), profile_path(r.user.username)
+      = link_to (image_tag ct.user.profile_pic, class: "photo"), profile_path(ct.user.username)
     %div.postspace
       %div.postheader
         %h3
-          = link_to truncate(r.user.to_s, length: 50), profile_path(r.user.username), class:"username"
-        %div.votingandpointsarea{ id: ("points_pop" unless current_user == r.user)}
+          = link_to truncate(ct.user.to_s, length: 50), profile_path(ct.user.username), class:"username"
+        %div.votingandpointsarea{ id: ("points_pop" unless current_user == ct.user)}
           - if current_user
-            %span.vote_points{style:"font-weight: bold;color: #404040;font-size: 16px;position: relative; top:3px;"}= r.points_awarded
+            %span.vote_points{style:"font-weight: bold;color: #404040;font-size: 16px;position: relative; top:3px;"}= ct.points_awarded
             %span{style:"font-weight: bold;color: #404040;font-size: 16px;position: relative; top:3px; margin-right:5px;"} pts
-            - if current_user == r.user
+            - if current_user == ct.user
               %div.dropdown.submission-icon{ style: "padding-top:0px; margin: 0px;" }
                 %a.dropdown-toggle{ href: "#", "data-toggle" => "dropdown", style: "padding:0px;" }
                   %span.caret{ style: "margin: 6px 0 0 0;" }
@@ -39,37 +39,38 @@
                     %div.graynub{ style: "top:-17px; left: 75px; margin:0; "}
                     %div{ style: "padding: 3px 0px; margin:0;"}
                       %ul.profile_dropdown{ style: "list-style: none; margin: 0px; padding: 0; min-width: 120px;"}
-                        %li= link_to "Delete Submission", retract_submission_path(r.id), remote: true, confirm: "Are you sure you want to delete your submission?", style: "padding: 0; color: inherit; text-shadow: none; padding-left: 8px; margin-left: -8px; margin-bottom: 2px;", class: "retract_link"
+                        %li= link_to "Delete Submission", retract_submission_path(ct.id), remote: true, confirm: "Are you sure you want to delete your submission?", style: "padding: 0; color: inherit; text-shadow: none; padding-left: 8px; margin-left: -8px; margin-bottom: 2px;", class: "retract_link"
             - else
-              = link_to vote_task_path(r.task.id, sa_id: r.submitted_answer.id), remote: true, class: ("btn vote_button " + (@votes.include?(r.submitted_answer.id) ? "btn-info" : "")) do
+              = link_to vote_task_path(ct.task.id, sa_id: ct.submitted_answer.id), remote: true, class: ("btn vote_button " + (@votes.include?(ct.submitted_answer.id) ? "btn-info" : "")) do
                 %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/purple+upvote+arrow.png" }            
           - else
             %a.btn.vote_button
               %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/purple+upvote+arrow.png" }
-              %div.vote_count= r.submitted_answer.total_votes.to_i
+              %div.vote_count= ct.submitted_answer.total_votes.to_i
       %div.posttext.leveltext.dropdown
-        %a.dropdown-toggle{ href: "#", "data-toggle" => "dropdown", role: "button", style: "color:inherit; cursor:default;" } #{r.task.question}
+        %a.dropdown-toggle{ href: "#", "data-toggle" => "dropdown", role: "button", style: "color:inherit; cursor:default;" } #{ct.task.question}
         %ul.dropdown-menu{ role: "menu", style: "left:99.5%; top:-70%; min-width:152px;"}
           %li
             %div
               %div.sidenub
             %div{ style: "padding: 3px 0px;"}
               %ul.profile_dropdown{ style: "list-style: none; margin: 0 2px 0 4px;"}
-                %li.CR_dropdown_option{ style: ("display:none;" if current_user == r.user)} 
-                  = link_to "Answer this question", take_section_path(r.task.section_id, task_id: r.task.id)
+                %li.CR_dropdown_option{ style: ("display:none;" if current_user == ct.user)} 
+                  = link_to "Answer this question", take_section_path(ct.task.section_id, task_id: ct.task.id)
                 %li.CR_dropdown_option
-                  = link_to "View all responses", task_drilldown_path(r.task.id)
+                  = link_to "View all responses", task_drilldown_path(ct.task.id)
                 %li.CR_dropdown_option
-                  = link_to "View all comments", submission_drilldown_path(r.submitted_answer.id)         
+                  = link_to "View all comments", submission_drilldown_path(ct.submitted_answer.id)         
       %div#cr_pop.CRarea
-        - if r.task.answer_sub_type == Task::TEXT
-          %pre{ style: "margin:20px; word-break:normal;" }= r.submitted_answer.content
-        - elsif r.task.answer_sub_type == Task::IMAGE
-          = image_tag(sanitize(r.submitted_answer.content))
-        - elsif r.task.answer_sub_type == Task::YOUTUBE
+        - if ct.task.answer_sub_type == Task::TEXT
+          %pre{ style: "margin:20px; word-break:normal;" }= ct.submitted_answer.content
+        - elsif ct.task.answer_sub_type == Task::IMAGE
+          = image_tag(sanitize(ct.submitted_answer.content))
+        - elsif ct.task.answer_sub_type == Task::YOUTUBE
           %center
-            %div.youtube_answer{ id: "youtube_answer_#{r.id}", alt: r.submitted_answer.content }        
-      = render "comments/comments", { owner: r.submitted_answer, owner_type: "SubmittedAnswer", owner_id: r.submitted_answer_id, comment_count: r.submitted_answer.comments.size, created_at: r.created_at, sharing_url: submission_details_url(r.path, r.submitted_answer.id), sharing_title: "Great response in the #{r.path.name} Challenge on @MetaBright." }
+            %div.youtube_answer{ id: "youtube_answer_#{ct.id}", alt: ct.submitted_answer.content }        
+      = render "comments/comments", social_details(ct)
+        
 
 :javascript
   $(function(){
@@ -78,7 +79,7 @@
     });
   });
   
-- if @more_available
+- if @more_available_url
   %div.post{ style: "text-align: center; margin: auto;" }
     :javascript
       $(function(){ 
