--- a/app/views/sections/finish.html.haml
+++ b/app/views/sections/finish.html.haml
@@ -21,7 +21,7 @@
         %span Continue improving your score
         %ul
           %li
-            Complete Challenge Questions
+            Complete Creative Responses
             %p= link_to "#{@available_crs} available", challenge_path(@section.path.permalink, completed: true)
           %li Take additional sections
           %p= link_to "#{@unlocked_sections} of #{@section.path.sections.size} sections unlocked", challenge_path(@section.path.permalink, completed: true, type: 2) 
