--- a/app/views/pages/landing.html.haml
+++ b/app/views/pages/landing.html.haml
@@ -1,7 +1,7 @@
 :css
   #landinglogo{width:720px;margin-top:-40px; margin-bottom:-30px; }
   #tagline{ width:580px; margin-right:auto; margin-left:auto; text-align:center;}
-  #tagline span{font-family:'MuliItalic'; font-size:18px; font-style:italic;}
+  #tagline span{ font-size:18px;}
   .container {width: 940px; margin-left: auto; margin-right: auto; zoom: 1; display:inline-block; padding:3px 0 0 142px;}
   .container h3{ left:68px; }
   #landingbox{ margin-top: 130px; height:335px; width: 695px; margin-left: auto; margin-right: auto; background-color: whiteSmoke;border-radius: 6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, 0.8); }
@@ -11,7 +11,9 @@
   %div#logospace{ style: "width:720px;margin-right:auto;margin-left:auto;position: relative;" }
     %img#landinglogo{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo" }
   %div#tagline
-    %span We believe that everyone has the right to be recognized for their knowledge and skills, not just what fits neatly on a resume. From web development to cooking, compete with others, and grow together.
+    %span We believe that everyone has the right to be recognized for their knowledge and skills, not just what fits neatly on a resume.
+    %br
+    %span From web development to cooking, compete with others, and grow together.
   %div#buttonspace{ style: "margin-top:30px;" }
     %center
       = link_to "/auth/google_oauth2", class: "btn danger", style: "margin-right: 40px; width:205px; padding-top:7px; padding-bottom:7px;" do
