Adding stuff to dashboard.

--- a/app/views/companies/overview.html.haml
+++ b/app/views/companies/overview.html.haml
@@ -35,6 +35,9 @@
       %td
         %h3= @comments
         %p Comments
+      %td
+        %h3= @issues
+        %p Task Issues
   %h3 Recent Activity
   %table.table.overview
     %tr
@@ -68,3 +71,6 @@
       %td
         %h3= @new_comments
         %p Comments
+      %td
+        %h3= @new_issues
+        %p Task Issues
