Cleaning up admin and getting ready for more elaborate controls.

--- a/app/views/companies/paths.html.haml
+++ b/app/views/companies/paths.html.haml
@@ -1,10 +1,7 @@
 %div.single_pane
-  = render "tab_header"
+  = render "header"
   = will_paginate @paths, style: "float:left; margin-bottom:0; margin-top: 0;"
-  %div{ style: "float:right; margin: 0 0 0px 0;" }
-    = form_tag admin_paths_path, method: "get" do
-      = text_field_tag :search, params[:search], class: "large", placeholder: "Search by name..."
-      = submit_tag "Search", class: "button button-standard"
+  = render "search", link: admin_paths_path, placeholder: "Name..."
   %table.table
     %thead
       %tr
@@ -31,14 +28,3 @@
               = link_to "approved", admin_update_path_path(p, approve: "false"), class: "mark_approved", remote: true, method: "put"
             - else
               = link_to "locked", admin_update_path_path(p, approve: "true"), class: "mark_approved", remote: true, method: "put"
-:javascript
-  $(function(){
-    $(".mark_approved").on("ajax:success", function(xhr, data){
-      log(data.status);
-      if(data.status == true){
-        $(this).text("approved");
-      } else {
-        $(this).text("locked");
-      }
-    });
-  });
