--- a/app/views/companies/styles.html.haml
+++ b/app/views/companies/styles.html.haml
@@ -1,5 +1,5 @@
 %div.single_pane
-  = render "companies/tab_header"
+  = render "companies/header"
   = form_for(@custom_style, url: admin_styles_path) do |f|
     %h2 Custom Styles
     %p{ style: "margin-top:10px;" } Edit the styles below. Note that you must save before these styles will take effect.
