--- a/app/views/personas/index.html.haml
+++ b/app/views/personas/index.html.haml
@@ -1,5 +1,5 @@
 %div#company-settings.single_pane
-  = render "companies/tab_header", { :company => current_user.company, :mode => "personas" }
+  = render "companies/header"
   %table.table
     %thead
       %th Name
