--- a/app/views/companies/comments.html.haml
+++ b/app/views/companies/comments.html.haml
@@ -1,31 +1,25 @@
 %div.single_pane
-  = render "companies/tab_header"
+  = render "header"
   = will_paginate @comments, style: "float:left; margin-bottom:0; margin-top: 0;"
-  %div{ style: "float:right; margin:0;" }
-    :javascript
-      $(".mark_approved").on("ajax:success", function(){
-        $(this).text("approved").parents("tr").css("background-color", "green");
-      });
-    = form_tag admin_comments_path, style: "margin: 0;", method: "get" do
-      = text_field_tag :search, params[:search], class: "large", placeholder: "Search by question..."
-      = submit_tag "Search", class: "button button-standard"
+  = render "search", link: admin_comments_path, placeholder: "Content..."
   %table.table
     %thead
       %tr
         %th{ style: "width: 5%" } id
         %th{ style: "width: 15%" } Path
         %th{ style: "width: 10%" } User Name
-        %th{ style: "width: 50%" } Question
+        %th{ style: "width: 50%" } Comment
         %th{ style: "width: 10%" } Type
         %th{ style: "width: 10%" } Approve
     %tbody
       - @comments.to_a.each do |c|
         %tr
           %td= c.id
+          %td= c.owner.task.path.name
           %td= link_to c.user.name, profile_path(c.user.username)
           %td= c.content
           %td= link_to "approve", admin_update_comment_path(c), class: "mark_reviewed", remote: true, method: "put"
-  = link_to "Refresh", admin_tasks_path, class: "button button-standard"
+  = link_to "Refresh", admin_comments_path, class: "button button-standard"
 :javascript
   $(function(){
     $(".mark_reviewed").on("ajax:success", function(xhr, data){
