--- a/app/views/companies/issues.html.haml
+++ b/app/views/companies/issues.html.haml
@@ -1,22 +1,23 @@
 %div.single_pane
   = render "header"
-  = will_paginate @tasks, style: "float:left; margin-bottom:0; margin-top: 0;"
-  = render "search", link: admin_tasks_path, placeholder: "Question..."
+  = will_paginate @issues, style: "float:left; margin-bottom:0; margin-top: 0;"
   %table.table
     %thead
       %tr
         %th{ style: "width: 5%" } id
         %th{ style: "width: 15%" } Path
         %th{ style: "width: 10%" } User Name
-        %th{ style: "width: 50%" } Question
-        %th{ style: "width: 10%" } Type
-        %th{ style: "width: 10%" } Approve
+        %th{ style: "width: 40%" } Question
+        %th{ style: "width: 15%" } Type
+        %th{ style: "width: 5%" } Edit
+        %th{ style: "width: 5%" } Resolve
+        %th{ style: "width: 5%" } Lock Task
     %tbody
       - @tasks.to_a.each do |t|
         %tr
           %td= t.id
           %td= t.path.name
-          %td= link_to t.creator.name, profile_path(t.creator.username)
+          %td= link_to t.creator.name, t.creator
           %td= t.question
           %td= Task::TYPES[t.answer_type]
           %td= link_to "approve", admin_update_task_path(t), class: "mark_reviewed", remote: true, method: "put"
