--- a/app/views/companies/overview.html.haml
+++ b/app/views/companies/overview.html.haml
@@ -2,7 +2,7 @@
   :css
     .overview td{ text-align: center; border: 1px solid #DDD; width: 80px; }
   = render "companies/tab_header"
-  %h3 Overview
+  %h3 All Time
   %table.table.overview
     %tr
       %td
@@ -52,7 +52,7 @@
         %p Arena Answers
       %td
         %h3= @new_creative_answers
-        %p Creative Response Answers
+        %p Creative Answers
       %td
         %h3= @new_task_answers
         %p Task Answers
