--- a/app/views/companies/overview.html.haml
+++ b/app/views/companies/overview.html.haml
@@ -1,7 +1,7 @@
 %div.single_pane
   :css
     .overview td{ text-align: center; border: 1px solid #DDD; width: 80px; }
-  = render "companies/tab_header"
+  = render "header"
   %h3 All Time
   %table.table.overview
     %tr
