--- a/app/views/stored_resources/_new_image.html.haml
+++ b/app/views/stored_resources/_new_image.html.haml
@@ -21,7 +21,7 @@
     });
   %div.image_input
     = image_tag "https://s3-us-west-1.amazonaws.com/moonlite/static/image.png", size: "16x16", style: "vertical-align: middle;"
-    %span{ style: "vertical-align: middle; font-size: 13px;" } Add optional image:
+    %span{ style: "vertical-align: middle; font-size: 13px;" } Add image:
     = file_field_tag("obj", class: "fileupload", style: "margin-left: 2px; line-height: inherit; height: inherit; vertical-align: middle; width: 185px;")
   %div{ style: "margin-top: 10px;" }
     = hidden_field_tag("stored_resource_id", nil, class: "image_input_field")
